2013-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el (auto-revert-notify-enabled): Move up.
	(auto-revert-use-notify): New defcustom.
	(auto-revert-mode, global-auto-revert-mode)
	(auto-revert-notify-add-watch, auto-revert-handler)
	(auto-revert-buffers): Use `auto-revert-use-notify' instead of
	`auto-revert-notify-enabled'.

2013-01-10  Elias Pipping  <pipping@exherbo.org>

	* files.el (auto-mode-alist): Use doc-view for djvu files (bug#13164).
	* doc-view.el (doc-view-document->bitmap):
	Use doc-view-single-page-converter-function instead of
	single-page-converter arg; adjust callers.

2013-01-10  Feng Li  <fengli@gmail.com>  (tiny change)

	* progmodes/which-func.el (which-function): Understand Semantic's use
	of overlays in imenu--index-alist.

2013-01-10  Wolfgang Jenkner  <wjenkner@inode.at>

	* man.el: Handle different "man -k" behaviors (bug#13160).  Use utf-8.
	(Man-man-k-use-anchor): New var.
	(Man-parse-man-k): New function.
	(Man-completion-table): Use it.
	(man): Flush the completion cache between uses.

2013-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el: Add file watch support.
	(auto-revert-notify-enabled): New defconst.
	(auto-revert-notify-watch-descriptor-hash-list)
	(auto-revert-notify-watch-descriptor)
	(auto-revert-notify-modified-p): New defvars.
	(auto-revert-notify-rm-watch, auto-revert-notify-add-watch)
	(auto-revert-notify-handler): New defuns.
	(auto-revert-mode, global-auto-revert-mode): Remove file watches
	when mode is disabled.
	(auto-revert-handler): Check for `auto-revert-notify-modified-p'.
	(auto-revert-buffers): Add file watches for active buffers.

2013-01-10  Dmitry Antipov  <dmantipov@yandex.ru>

	* cus-start.el (toplevel): Only allow float values for
	scroll-up-aggressively and scroll-down-aggressively.
	Allow any number for line-spacing.

2013-01-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-pdfdraw-program): Allow "pdfdraw" name.